--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
-  @apply bg-background-color-dark pt-4 md:pt-8 px-4 md:px-16;
+  @apply bg-background-color-dark;
+  overscroll-behavior: none;
 }
